--- a/.eslintrc
+++ b/.eslintrc
@@ -76,7 +76,8 @@
     "prefer-arrow-callback": "warn",
     "react/function-component-definition": ["warn", { "namedComponents": "arrow-function" }],
     "no-restricted-exports": "off",
-    "react/no-unused-prop-types": "warn"
+    "react/no-unused-prop-types": "warn",
+    "react/require-default-props": "warn"
   },
   "ignorePatterns": ["build/"]
 }
